<resources>
    <string name="app_name">MovHaul\nDriver</string>
    <string name="custom_title">Click Shipment</string>
    <string name="img_profile">Choose Profile</string>
    <string name="img_vec_back">Vehicle Back </string>
    <string name="img_vec_front">Vehicle Front </string>
    <string name="img_vec_side">Vehicle Side</string>
    <string name="img_vec_inside">Vehicle Inside</string>
    <string name="img_vec_rc">Vehicle Registration</string>
    <string name="img_vec_ins">Vehicle Insurance</string>
    <string name="img_vec_lic">Vehicle Licence</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_internet">No internet connection!</string>
    <string name="open_settings">Open Settings</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="submit">Submit</string>
    <string name="register_verification">Register - Verification</string>
    <string name="name_according_to_the_licence">Name (According to the Licence)</string>
    <string name="licence_no">Licence No</string>
    <string name="secondary_contact">Secondary Contact</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="attach_driver_licence">Attach Driver Licence</string>
    <string name="verify">Verify</string>
    <string name="by_signing_up_you_agree_to_the_terms_amp_conditions"><![CDATA[By signing up you agree to the terms & conditions]]></string>
    <string name="and_privacy_policy_of_movehaul">and privacy policy of MovHaul</string>
    <string name="lets_gets_started">Lets Gets Started!!</string>
    <string name="choose_anyone_of_these_vehicle_types_to_apply_their_services">Choose anyone of these vehicle types to apply their services</string>
    <string name="truck">Truck</string>
    <string name="bus">Bus</string>
    <string name="road_side_assistance">Road Side Assistance</string>
    <string name="loading">Loading..</string>
    <string name="wait">Please wait</string>
    <string name="network">Network Error! Please Try Again Later.</string>
    <string name="connect">Please Connect Internet and Try again</string>
    <string name="success">SUCCESS</string>
    <string name="thanks">Thank you for submitting your details for verification! Admin needs to verify your details.</string>
    <string name="verf">Once verification is completed. You can login to MovHaul.</string>
    <string name="va_ph">Enter valid phone Number</string>
    <string name="va_ma">Enter valid email address!</string>
    <string name="va_us">Enter UserName!</string>
    <string name="up_lc">Upload Licence Image</string>
    <string name="va_se">Enter valid Secondary phone number</string>
    <string name="va_lc">Enter a valid Licence Number</string>
    <string name="va_fn">Enter Full Name!</string>
    <string name="dr">Driver Licence Added.</string>
    <string name="us_al">User Details already Registered by someone,Please Try again</string>
    <string name="perm_de">Some Permission is Denied</string>
    <string name="mobile_no">Mobile No</string>
    <string name="forgot_mobile_no">Login Via Email.!</string>
    <string name="by_login_you_agree_to_the_terms_amp_conditions_nand_privacy_policy_of_movehaul"><![CDATA[By Login you agree to the terms & conditions  and privacy policy of MovHaul]]></string>
    <string name="forgot_ph_no">Forgot Ph. No</string>
    <string name="type_email">Type Email</string>
    <string name="va_em">Enter a valid email address!</string>
    <string name="no_nm">No Number Associated with this Email</string>
    <string name="login_otp">Login-OTP</string>
    <string name="check_your_message_or">Check Your Message (Or)</string>
    <string name="email_for_otp_code">Email for OTP Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="i_m_active">I\'m Active</string>
    <string name="job_postings">Job Postings</string>
    <string name="movehaul_is_better_place_to_move_the_goods_from_one_place_to_another_in_a_minute">MovHaul is better place to move the goods from one place to another in a minute!!</string>
    <string name="my_trips">My Trips</string>
    <string name="profile">Profile</string>
    <string name="reviews">Reviews</string>
    <string name="payments">Payments</string>
    <string name="bank_details">Bank Details</string>
    <string name="update">broadcast received</string>
    <string name="pev">Permission granted now you can read the storage</string>
    <string name="deni">Oops you just denied the permission</string>
    <string name="lco">Location Not Enabled</string>
    <string name="comp_pr">Please Complete Your Profile First</string>
    <string name="be_activ">Please Be Active to find Jobs.!</string>
    <string name="grn_ac">You need to grant access to</string>
    <string name="dont_hav">You Dont Have Any Trips to Show.!</string>
    <string name="no_jb">No Jobs Found</string>
    <string name="job_posting">Job Posting</string>
    <string name="pickup">Pickup</string>
    <string name="drop">Drop</string>
    <string name="date">Date</string>
    <string name="see_more_details">See More Details</string>
    <string name="goods_type">Goods Type</string>
    <string name="time">Time</string>
    <string name="nearby_landmark">Nearby Landmark</string>
    <string name="near_lan">Nearby Landmark</string>
    <string name="ur_succ">You successfully bidded for the job id:</string>
    <string name="er_num">Phone Number not match..</string>
    <string name="er_ph">Enter Phone Number</string>
    <string name="er_bid">Enter bidding amount</string>
    <string name="booking">Booking..</string>
    <string name="biddin">Bidding..</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="support">Support</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="coma">Please Connect Internet and Try again</string>
    <string name="fea">Finish Job</string>
    <string name="asde">Start</string>
    <string name="asdfew">Nearby Landmark</string>
    <string name="easd">Nearby Landmark</string>
    <string name="adsf">Current</string>
    <string name="adv">Upcoming</string>
    <string name="asd">Network Error! Please Try Again Later.</string>
    <string name="asfe">Please Connect Internet and Try again</string>
    <string name="adew">Upload Vehicle Insurence</string>
    <string name="adfe">Upload Vehicle RC</string>
    <string name="cvd">Upload Vehicle Side Image</string>
    <string name="adfw">Upload Vehicle Front Image</string>
    <string name="ave">Upload Vehicle Back Image</string>
    <string name="ade">Upload Profile Image</string>
    <string name="aveasd">Enter Valid Address</string>
    <string name="aew">Enter Valid Secondary Number</string>
    <string name="aweq">Enter Valid Contact Number</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="back">Back</string>
    <string name="front">Front</string>
    <string name="side">Side</string>
    <string name="vechile_pic">Vehicle Pic</string>
    <string name="contact_number">Contact Number</string>
    <string name="secondary_number">Secondary Number</string>
    <string name="address">Address</string>
    <string name="attach_vechile_title">Attach Vehicle Title</string>
    <string name="attach_vechile_insurance">Attach Vehicle Insurance</string>
    <string name="updat">Update</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="adf">Enter Valid Contact Number</string>
    <string name="fve">Enter Valid Secondary Number</string>
    <string name="vea">Enter Valid Address</string>
    <string name="dvea">Upload Profile Image</string>
    <string name="awev">Upload Vehicle Inside Image</string>
    <string name="aewc">Upload Vehicle Front Image</string>
    <string name="adc">Upload Vehicle RC</string>
    <string name="veaas">Upload Vehicle Insurence</string>
    <string name="inside">Inside</string>
    <string name="please_bid_carefully">Please bid Carefully!!</string>
    <string name="amount">Amount</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="please_check_bid_rules">Please check bid rules</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_want_to">Are you sure want to</string>
    <string name="logouts">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="thanks_for_confirming_assistance">Thanks for Booking !!</string>
    <string name="our_customer_is_waiting_for_your_assistance_please_reach_soon_n_your_details_shared_to_customer">Our Customer is waiting for your Assistance, Please reach soon.  Your Details shared to Customer</string>
    <string name="booking_id_number_is">Booking id number is</string>
    <string name="do_you_want_to_cancel_this_trip">Do you want to cancel this Trip?</string>
    <string name="please_check_bid_cancellation_rules">Please check bid Cancellation rules</string>
    <string name="confirma">Confirm</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_ph_no">Customer Ph.No.</string>
    <string name="pickupsa">Pickup</string>
    <string name="dropa">Drop</string>
    <string name="nearby_landmarka">Nearby Landmark</string>
    <string name="start">Start</string>
    <string name="ad">Account Not Activated</string>
    <string name="asdf">Your details for Verification!!</string>
    <string name="cea">Once Verification is completed, You can login to Movehaul.</string>
    <string name="adsfe">Please Connect Internet and Try again</string>
    <string name="aveas">Enter valid phone Number</string>
    <string name="veas">Mobile Number Not Registered</string>
    <string name="avca">Network Error! Please Try Again Later.</string>
    <string name="avva">Please Connect Internet and Try again</string>
    <string name="vae">Please Try Again Later.</string>
    <string name="asc">Account Number not match</string>
    <string name="cs">Enter Valid Account Number</string>
    <string name="cz">Re Enter Account Number</string>
    <string name="asdx">Enter Valid Account Number</string>
    <string name="css">Enter Account Number</string>
    <string name="aex">Enter Valid Routing Number</string>
    <string name="asx">Enter Routing Number</string>
    <string name="cae">Enter Valid Bank Name</string>
    <string name="acz">Enter Bank Name</string>
    <string name="azs">Please Be Active to get MyTrips</string>
    <string name="ax">Otp Failed. Try Again Later</string>
    <string name="acsx">Customer Location is Too Far</string>
    <string name="adxz">Enter Experience</string>
    <string name="zcw">Business Info</string>
    <string name="zxa">Enter Valid Address</string>
    <string name="acxz">Enter Local Government</string>
    <string name="cza">Enter Service Areas</string>
    <string name="zxwa">Enter Primary Route Coverage</string>
    <string name="zcfw">Enter Service Type</string>
</resources>
