<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/shadowColor" />

        <TextView

            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/lets_gets_started"
            android:textColor="@color/brown"
            android:textSize="@dimen/_22sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/choose_anyone_of_these_vehicle_types_to_apply_their_services"
            android:textColor="@color/dialog_text"
            android:textSize="@dimen/_15sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_25sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <ImageView
                    android:id="@+id/image_truck"
                    android:layout_width="@dimen/_87sdp"
                    android:layout_height="@dimen/_87sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_bu"
                    android:padding="20dp"
                    android:src="@drawable/truckn" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <ImageView
                    android:id="@+id/image_bus"
                    android:layout_width="@dimen/_87sdp"
                    android:layout_height="@dimen/_87sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_bu"
                    android:padding="15dp"
                    android:src="@drawable/busn" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:paddingRight="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/iuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/truck"
                    android:textColor="@color/dialog_text"
                    android:textSize="@dimen/_16sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/tyy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bus"
                    android:textColor="@color/dialog_text"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_25sdp"
            android:orientation="vertical"
            android:paddingRight="@dimen/_25sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">


                <ImageView
                    android:id="@+id/image_roadside_assistance"
                    android:layout_width="@dimen/_87sdp"
                    android:layout_height="@dimen/_87sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_bu"
                    android:padding="20dp"
                    android:src="@drawable/road_assist" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center">


                <TextView
                    android:id="@+id/tyys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/road_side_assistance"
                    android:textColor="@color/dialog_text"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>