<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_215sdp"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_bg"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_2sdp"
                android:background="@color/redColor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_3sdp">

                <ImageView
                    android:id="@+id/imageViggew2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/delivery_addr" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_10sdp">


                    <com.rey.material.widget.TextView
                        android:id="@+id/textview_boogk_from_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pickup"
                        android:textColor="@color/redColor"
                        android:textSize="@dimen/_12sdp" />

                    <com.rey.material.widget.TextView
                        android:id="@+id/textview_content_pickup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_1sdp"
                        android:singleLine="true"
                        android:text="#6, North Avenue, Abuja, Nigeria"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <ImageView
                    android:id="@+id/imageVsiegsw2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/goods_type" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_10sdp">


                    <com.rey.material.widget.TextView
                        android:id="@+id/textssview_book_to_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drop"
                        android:textColor="@color/redColor"
                        android:textSize="@dimen/_12sdp" />

                    <com.rey.material.widget.TextView
                        android:id="@+id/textview_content_drop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_1sdp"
                        android:text="#977, West Boage, Dekina, Nigeria"
                        android:textColor="@color/textColor"

                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_goods_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp">

                <ImageView
                    android:id="@+id/imageViegsw2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/select_truck_type" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_10sdp">


                    <com.rey.material.widget.TextView
                        android:id="@+id/textviessw_book_to_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goods_type"
                        android:textColor="@color/redColor"
                        android:textSize="@dimen/_12sdp" />

                    <com.rey.material.widget.TextView
                        android:id="@+id/textview_content_goodstype"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_1sdp"
                        android:text="Computer Systems"
                        android:textColor="@color/textColor"

                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_2sdp">

                    <ImageView
                        android:id="@+id/imageVissew2"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_7sdp"
                        android:layout_marginRight="@dimen/_7sdp"
                        android:src="@drawable/time_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/_10sdp">


                        <com.rey.material.widget.TextView
                            android:id="@+id/textssview_book_from_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="@color/redColor"
                            android:textSize="@dimen/_12sdp" />

                        <com.rey.material.widget.TextView
                            android:id="@+id/textview_content_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_1sdp"
                            android:singleLine="true"
                            android:text="12:27 PM"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_14sdp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/_2sdp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:src="@drawable/date_icon" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/_10sdp">


                        <com.rey.material.widget.TextView
                            android:id="@+id/textview_book_from_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textColor="@color/redColor"
                            android:textSize="@dimen/_12sdp" />

                        <com.rey.material.widget.TextView
                            android:id="@+id/textview_content_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_1sdp"
                            android:singleLine="true"
                            android:text="20-12-2017"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_14sdp" />

                    </LinearLayout>


                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageview_bidding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/bid_ico" />


                </FrameLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_nearby"
                >

                <ImageView
                    android:id="@+id/imageViesgsw2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/delivery_addr_job_rvw" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/layout_nearby1"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_3sdp"
                    android:paddingLeft="@dimen/_10sdp">


                    <com.rey.material.widget.TextView
                        android:id="@+id/textview_book_to_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nearby_landmark"
                        android:textColor="@color/redColor"
                        android:textSize="@dimen/_12sdp" />

                    <com.rey.material.widget.TextView
                        android:id="@+id/textview_content_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:paddingTop="@dimen/_1sdp"
                        android:text="Desktops,Computer Tables,Fans etc.."
                        android:textColor="@color/textColor"

                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>


